src/contact.css
.body{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.failed{
    display: none;
}
.success{
    background-color: white;

    border-radius: 10px;
    box-shadow:0px 0px 1px 1px rgb(221 221 221);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: rgb(9, 165, 9);
}
.success svg{
   width: 3em;
   color: green;
}
.success svg path{
    fill: rgb(9, 165, 9);
}
.body .form{
    text-align: left;
    
}
p{
    margin-top: 16px;
    margin-bottom: 48px;
}
span{
    font-family: 'Inter';
    font-style: normal;
    font-weight: 500;
    height: 16.8px;
    font-size: 14px;
    color: #F83F23;
    margin-left: 2px;
    margin-top: 0;
    margin-bottom: 1em;
}

.field{
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0;
}
.body .form form .row{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas:
    "left right"
    ;
    justify-content: left;
    margin: 0;
}
label{
    font-family: 'Inter';
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    margin: 0 0 8px 0;
}
#firstfield{
    grid-area: "left";
}
#lastfield{
    grid-area: "right";
}
#first_name , #last_name{
    width: 94%;
    height: 44px;
    padding-left: 9px;

}
#email{
    width: 97.5%;
    height: 44px;

    padding-left: 9px;
    margin-bottom: 5px;
}
.email-txt{
    margin: 0;
    font-family: 'Inter';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 20px;
    color: #475467;
}
input{
    margin-top: 0;
    margin-left: 0;
    
    border: 1px solid #D0D5DD;

    border-radius: 8px;
}
.inputDefault{
    margin-top: 0;
    margin-left: 0;
    
    border: 1px solid #D0D5DD;

    border-radius: 8px;
}
.firstinputError{
    margin-top: 0;
    margin-left: 0;
    border: 1px solid #F89687;
}
.firstinputError:focus{
    
    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #FFD3CC;
}

.lastinputError{
    margin-top: 0;
    margin-left: 0;
    border: 1px solid #F89687;
}
.lastinputError:focus{

    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #FFD3CC;
}
.mailinputError{
    margin-top: 0;
    margin-left: 0;
    border: 1px solid #F89687;
} 
.mailinputError:focus{

    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #FFD3CC;
} 
.messageinputError{
    margin-top: 0;
    margin-left: 0;
    border: 1px solid #F89687;
} 
.messageinputError:focus{
    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #FFD3CC;

}
input:focus{
    outline: 1px solid #84CAFF;
    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
}
textarea{
    margin-top: 0;
    margin-left: 0;
    width: 720px;
    height: 132px;
    border: 1px solid #D0D5DD;
    border-radius: 8px;
    padding-left: 9px;
    resize: none;
}
textarea:focus{
    
    outline: 1px solid #84CAFF;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;


}
.checkfield{
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: left;
    align-items: flex-start;

}
.checkfield input{
    width: 20px;
    height: 20px;
    outline: 2px solid #1570EF;
    box-sizing: content-box;
    border-radius: 10px;
    accent-color: rgb(255, 255, 255);
}
.checkfield input:checked{
    width: 20px;
    height: 20px;
    /* border-radius: 10px;
    border: 1px solid #1570EF; */

}
input[type=checkbox]
{
  -webkit-appearance:checkbox;
}
.checkfield input:focus{
    border-radius: 10px;
    /* border: 1px solid #84CAFF;
box-shadow: 0px 0px 0px 4px #D1E9FF; */
}

.checkfield label{
    font-family: 'Inter';
    color: #475467;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
}
button{
    width: 729px;
    height: 48px;
    font-weight: 600;
    font-size: 16px;
    padding-left: 9px;

    color: #FFFFFF;
    background: #1570EF;
    cursor: pointer;
    border: 0px solid #1570EF;
    margin-top: 0;
    margin-left: 0;
    margin-right: 8px;
    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
    border-radius: 8px;

}
button:hover{
    background: #175CD3;
}
button:focus{
    background: #1570EF; 
box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
}
button:disabled{
    cursor:not-allowed;
    background: #B2DDFF;
}
@media screen and (max-width: 750px) {
    .body .form form .row{
        display: grid;
        grid-template-columns:1fr;
        grid-template-rows: 1fr 1fr;
        grid-template-areas:
        "top"
        "bottom"
        ;
        justify-content: left;
        margin: 0;
    }
    p{
        margin-top: 16px;
        margin-bottom: 48px;
    }
    #first_name , #last_name{
        width: 100%;
        height: 44px;
        padding-left: 9px;
    
    }
    #email{
        width: 100%;

    }
    textarea{
        width: 100%;
    }
    button{
        width: 100%;

    
    }
    .checkfield input{
        width: 26px;
        height: 13px;
        background-color: white;
        outline:none;
        box-sizing: content-box;
        border-radius: 10px;
        scale: 1.3;
        accent-color: rgb(255, 255, 255);
    }
    .checkfield input:checked{
        width: 26px;
        height: 13px;
        border-radius: 10px;
        outline: 2px solid #1570EF;

        /* border: 1px solid rgba(21, 112, 239, 1);
        outline:none; */
    
    }
    .checkfield input:focus{
        /* border-radius: 10px;
        border: none;
    box-shadow: 0px 0px 0px 4px #D1E9FF; */
    }
}

